<resources>
    <string name="canceled">Canceled</string>
    <string name="the_product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="surety">Are you sure?</string>
    <string name="b_discount_first">First Order Disc.</string>
    <string name="b_total">Total Price</string>
    <string name="price">Price</string>
    <string name="detail">Detail</string>
    <string name="tax">Tax</string>
    <string name="bill">Bill</string>
    <string name="delivery_charge_new">Delivery Charges</string>
    <string name="wanttoadd">Add this category into wishlist?</string>
    <string name="select_one">Please Select One</string>
    <string name="add_to_cart">Add to Cart Successfully</string>
    <string name="ok">OK</string>
    <string name="loading">Loading…</string>
    <string name="select_quan">Select Quantity</string>
    <string name="select_color">Select Color</string>
    <string name="select_size">Select Size</string>
    <string name="add_marker">Set Marker For location</string>
    <string name="tv_note">*Note: The shipping price and time depend on the stores numbers and confirmations.
    </string>
    <string name="tv_pro_add_address">Add Delivery Address</string>
    <string name="musthavereedem">You must have 300 points to redeem</string>
    <string name="notavailabe">Not Available</string>
    <string name="nocharges">Free Shipping over 500 SAR</string>
    <string name="onlyforpreorder">Its only select for pre orders</string>
    <string name="related">Related Products</string>
    <string name="or">-OR-</string>
    <string name="get_gps">Get Address From Location</string>
    <string name="address">Address </string>
    <string name="go_shop">Go Shop Now</string>
    <string name="go_cart">Go To Cart</string>
    <string name="desiiic">Description :</string>
    <string name="sizecolor" translatable="false">Size and Color :</string>
    <string name="productsize" translatable="false">Product Size :  </string>
    <string name="productcolor" translatable="false">Product Color :  </string>
    <string name="size" translatable="false">Size :</string>
    <string name="color" translatable="false">Color :</string>
    <string name="ratiii">Rating &amp; Reviews</string>
    <string name="vip_dis">VIP Discount</string>
    <string name="maroof">Maroof</string>
    <string name="wish">Wishlist</string>
    <string name="fav_store">Favorite\n Stores</string>
    <string name="fav_cat">Favorite\nCategories</string>
    <string name="fav_prod">Favorite\n Products</string>
    <string name="fav"> Favorite</string>
    <string name="cat"> Categories</string>
    <string name="wallet_ammount">My Wallet Ammount : </string>
    <string name="j6_point">J6 Points : </string>
    <string name="VerificationCode">Verification Code</string>
    <string name="VerificationCodeDesc">Please enter verification code sent to</string>
    <string name="term_and_conditions">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="return_p">Return and Exchange Policy</string>
    <string name="help_centre">Help Center</string>
    <string name="expire">Expired</string>
    <string name="no_record">No Record Found</string>
    <string name="no_product">No Products Available</string>
    <string name="no_fav">No Favorite Available</string>
    <string name="Deal">Deals</string>
    <string name="mblnumber">Enter your mobile number</string>
    <string name="top_selling">Top Selling</string>
    <string name="stores">Stores</string>
    <string name="caty">Categories</string>
    <string name="favourt">Favorite</string>
    <string name="Cart">Cart</string>
    <string name="MYCart"> MY Cart</string>
    <string name="Me">Account</string>
    <string name="searchtext2">Search For Stores , Products and More</string>
    <string name="app_name" translatable="false">J6 Stores</string>
    <string name="name" translatable="false">SameCiti - Customer</string>
    <string name="currency">SAR</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="txtCredits" translatable="false"><a href="http://www.google.com">Google</a></string>
    <string name="uname">Name</string>
    <string name="uphone">Phone</string>
    <string name="urefrel">Referal Code</string>
    <string name="rating">Rating &amp; Reviews</string>
    <string name="create">Create an Account?</string>
    <string name="email">Enter your Email</string>
    <string name="password">Enter your Password</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="sign_upto">Please Sign Up to continue</string>
    <string name="popular">Popular Products</string>
    <string name="guest">Guest</string>
    <string name="or_sign">Or Sign In as a</string>
    <string name="facebook_app_id" translatable="false">964749680607230</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb964749680607230</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="nav_terms" translatable="false">Terms &amp; Privacy</string>
    <string name="offer" translatable="false">Offer :</string>
    <string name="start_time" translatable="false">Start Time : </string>
    <string name="end_time" translatable="false">End Time : </string>
    <string name="wallet" translatable="false">Wallet Used</string>
    <string name="coupon_used" translatable="false">Coupon Used</string>
    <string name="apply" translatable="false">Apply</string>
    <string name="nav_home" translatable="false">Shop Now</string>
    <string name="nav_stores" translatable="false">Stores</string>
    <string name="nav_chat" translatable="false">Chat With Us</string>
    <string name="nav_user" translatable="false">User</string>
    <string name="nav_order" translatable="false">My Orders</string>
    <string name="nav_profile" translatable="false">My Profile</string>
    <string name="nav_order_note" translatable="false">Order note:(optional)</string>
    <string name="nav_note" translatable="false">Enter any extra note(optional)</string>
    <string name="nav_support" translatable="false">Support</string>
    <string name="nav_about" translatable="false">About Us</string>
    <string name="failed" translatable="false">Sorry,Your Payment Has Failed</string>
    <string name="again" translatable="false">Please Try Again</string>
    <string name="retry" translatable="false">Retry Order</string>
    <string name="nav_review" translatable="false">Review Us</string>
    <string name="nav_contact" translatable="false">Contact Us</string>
    <string name="nav_share" translatable="false">Share App</string>
    <string name="nav_logout" translatable="false">Logout</string>
    <string name="btn_continue" translatable="false"><b>Login</b></string>
    <string name="btn_continueto" ><b>Welcome To\nJ6 Stores</b></string>
    <string name="btn_continueto1" >Please login to continue</string>
    <string name="btn_Register" translatable="false">Sign Up</string>
    <string name="rewards_points" translatable="false">J6 Points</string>
    <string name="rech_wallet" translatable="false">Recharge Wallet</string>
    <string name="continue_bt" translatable="false">Continue</string>
    <string name="continue_sh">Continue Shopping</string>
    <string name="wall_am" >My Wallet</string>
    <string name="et_login_phone_hint" translatable="false">Mobile Number</string>
    <string name="tv_login_email" translatable="false">Email</string>
    <string name="tv_login_password" translatable="false">Password</string>
    <string name="btn_login" translatable="false">Login</string>
    <string name="btn_send" translatable="false">Send</string>
    <string name="tv_login_note" translatable="false">Before continue with application you must verify your mobile number. Our system will sent you OTP code on registered mobile number</string>
    <string name="tv_reg" translatable="false">Register</string>
    <string name="tv_reg_name_hint">Name</string>
    <string name="tv_reg_pincode">Pincode/Area Code/Zip</string>
    <string name="tv_reg_socity">Society/Flat</string>
    <string name="order_amount" translatable="false">Order Amount</string>
    <string name="btn_reg_socity_choose">Choose Society...</string>
    <string name="tv_reg_house">House Number</string>
    <string name="amount_pa" translatable="false">Amount Payable</string>
    <string name="add_del" translatable="false">Add delivery address</string>
    <string name="btn_reg_update">Update Profile</string>
    <string name="et_reg_search">Search Society...</string>
    <string name="et_sea" translatable="false">Search Society..</string>
    <string name="total" translatable="false">Total :</string>
    <string name="tv_reg_note">Note : service available for RAJKOT only</string>
    <string name="tv_reg_address">Address(Required)</string>
    <string name="et_reg_address">Complete Address</string>
    <string name="use" translatable="false">Use</string>
    <string name="rate" translatable="false">Rate App</string>
    <string name="feedback" translatable="false">Feedback</string>
    <string name="store" translatable="false">Store Pick Up</string>
    <string name="confirm_order" translatable="false">Confirm</string>
    <string name="pickup" translatable="false">Cash On Delivery</string>
    <string name="paymentmentord" translatable="false">Select Payment method</string>
    <string name="cash">Cash On Delivery</string>
    <string name="googlepay" translatable="false">Google Pay</string>
    <string name="applepay" translatable="false">Apple Pay</string>
    <string name="tv_cart_title">Cart</string>
    <string name="debit" translatable="false">Debit / Credit Card</string>
    <string name="net" translatable="false">Net Banking</string>
    <string name="card" translatable="false">Cards</string>
    <string name="promo" translatable="false">Promo Code</string>
    <string name="tv_cart_clear">Clear All Product</string>
    <string name="Remove">Remove</string>
    <string name="tv_cart_checkout">Continue Checkout</string>
    <string name="tv_cart_total">Total\u0020</string>
    <string name="tv_cart_item">Items\u0020</string>
    <string name="tv_cart_rs">\u0020SAR</string>
    <string name="coupon" translatable="false">Coupon</string>
    <string name="sure_del" translatable="false">Are you sure!
    you want to delete all cart product</string>
    <string name="tv_del_title">Delivery Date/Time</string>
    <string name="tv_del_address">Delivery Address</string>
    <string name="et_del_address_hint">Enter Delivery address..</string>
    <string name="tv_del_continue">Continue</string>
    <string name="tv_del_date">Select delivery date</string>
    <string name="tv_del_time">Select delivery time</string>
    <string name="tv_del_date_time">Delivery Data/Time</string>
    <string name="tv_total_item_amount">Total Items And Amount</string>
    <string name="tv_total_total">Total Amount </string>
    <string name="tv_home_cat">Products</string>
    <string name="tv_home_view">View all ></string>
    <string name="checkout" translatable="false"> Checkout </string>
    <string name="tv_app_name">Wallet</string>
    <string name="tv_product_name" translatable="false">Products</string>
    <string name="selling_product" translatable="false">Top Selling Products</string>
    <string name="deals" translatable="false">Deals of the Day</string>
    <string name="view_all" translatable="false">View All</string>
    <string name="sponsered" translatable="false">Sponsored</string>
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="followed">Followed</string>
</resources>