<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/laddan"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:background="@color/white"
            android:layout_margin="1dp"
            android:id="@+id/eng"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eng"
            android:textColor="@color/green"
            />
        <TextView
            android:background="@color/white"
            android:layout_margin="1dp"
            android:id="@+id/arab"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="عربى"
            android:textColor="@color/green"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <View
            android:layout_width="20dp"

            android:layout_height="1dp"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/iv_header_img"
            android:src="@drawable/user"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_header_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:text="@string/uname"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_adres_phone"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginLeft="10dp"
                android:text="@string/uphone"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nav_logout"
                    android:textColor="@color/white"
                    android:layout_marginTop="13dp"
                    android:textSize="17sp"
                    android:text="@string/nav_logout"/>

                <TextView
                    android:id="@+id/nav_my_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/edit_profile"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"

                    android:textSize="17sp" />
            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="3"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/nav_fav"
            android:textColor="@color/white"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/bold"
            android:textSize="23sp"
            android:text="@string/favourt"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:id="@+id/nav_fav_num"
            android:layout_toRightOf="@+id/nav_fav"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="0"/>


        <TextView
            android:id="@+id/nav_followed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/followed"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/bold"
            android:textSize="23sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:id="@+id/nav_followed_num"
            android:textColor="@color/white"
            android:layout_marginTop="13dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="0"/>
    </LinearLayout>

</LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/my_orders"
            android:text="@string/nav_order"
            android:layout_margin="10dp"
            android:textSize="18sp"

            android:textColor="@color/black"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/my_wallet"
            android:layout_below="@id/my_orders"
            android:text="@string/wall_am"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_account_balance_wallet_black_24dp"
            android:textColor="@color/black"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/J6points"
            android:text="@string/rewards_points"
            android:layout_below="@id/my_wallet"
            android:textSize="18sp"
            android:drawableStart="@drawable/points"
            android:textColor="@color/black"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/top_selling"
            android:text="@string/top_selling"
            android:layout_below="@id/J6points"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_baseline_thumb_up_24"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/deals"
            android:text="@string/Deal"
            android:layout_below="@id/top_selling"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_baseline_thumb_up_24"
            android:textColor="@color/black"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/nav_login"
            android:text="@string/btn_login"
            android:visibility="gone"
            android:layout_below="@id/deals"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_exit"
            android:textColor="@color/black"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:id="@+id/v1"
            android:layout_below="@id/nav_login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="5dp"
            android:layout_below="@id/v1"
            android:id="@+id/l1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:id="@+id/rate"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:drawableTop="@drawable/rate"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_share"
                android:id="@+id/share"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:drawableTop="@drawable/share"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:id="@+id/feedback"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:drawableTop="@drawable/feedback"
                android:layout_weight="1"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:id="@+id/v2"
            android:layout_below="@id/l1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_contact"
            android:layout_below="@id/v2"
            android:textSize="23sp"
            android:layout_margin="10dp"
            android:id="@+id/contact"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_below="@id/contact">
            <TextView
                android:layout_width="0dp"
                android:id="@+id/facbook"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/facebook"
                />

            <TextView
                android:id="@+id/whatsapp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/whatsapp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/instagram"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/instagram"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/twitter"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/twitter"
                />


        </LinearLayout>




    </RelativeLayout>

</LinearLayout>