<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:shimmer="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/MYCart"
        android:textColor="@color/white"
        android:textSize="23sp"

        android:gravity="center_vertical"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rl1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="@dimen/space_10">

                <Fonts.LatoBLack
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cart_item"
                    android:textSize="18sp"
                    android:textColor="#000" />

                <Fonts.LatoBLack
                    android:id="@+id/tv_cart_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:textSize="18sp"
                    android:textColor="#000" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_cart_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:paddingTop="@dimen/space_8"
                android:paddingBottom="@dimen/space_8"
                android:text="@string/Remove"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="15sp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/relate"
            android:layout_below="@id/rl1" />

        <LinearLayout
            android:id="@+id/relate"
            android:layout_above="@id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:textColor="@color/black"
                android:textAlignment="center"
                android:padding="@dimen/space_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/related"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_related"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_marginBottom="@dimen/space_10"
                android:id="@+id/shimmer_view_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                shimmer:duration="500">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <include layout="@layout/data_holder1" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/continue_sh"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:paddingRight="@dimen/space_20"
            android:elevation="@dimen/space_4"
            android:paddingLeft="20dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/butonshape"/>
    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_cart_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:padding="@dimen/space_5"
            android:text="@string/tv_cart_checkout"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_X_small">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="@dimen/space_10">

                    <Fonts.LatoBLack
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_cart_total"
                        android:textSize="18sp"
                        android:textColor="@color/white" />

                    <Fonts.LatoBLack
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:text="@string/currency"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>

                    <Fonts.LatoBLack
                        android:id="@+id/tv_cart_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50"
                        android:layout_marginLeft="2dp"
                        android:textSize="18sp"
                        android:textColor="@color/white" />





                </LinearLayout>
            </LinearLayout>

            <Fonts.LatoBLack
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/checkout"
                android:padding="12dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/butonshape"
                android:textColor="#fff"
                android:textSize="20sp" />


        </RelativeLayout>


</LinearLayout>